# AgroWeatherUI

./: .replit  README.md  app.py  pyproject.toml  requirements.txt  weather_kazakhstan_with_region.csv
.streamlit/: config.toml
attached_assets/: Pasted-import-streamlit-as-st-import-pandas-as-pd-import-random-import-matplotlib-pyplot-as-plt-import--1759573568747_1759573568749.txt
